--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JSON Server API for users",
   "main": "index.js",
  "scripts": {
-  "start": "json-server --watch db.json --port 10000"
+  "start": "json-server --watch db.json --host 0.0.0.0 --port 10000"
 },
   "dependencies": {
     "json-server": "^0.17.4"
