--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "react-assignment-json",
+  "name": "user-api",
   "version": "1.0.0",
-  "description": "JSON Server API for users",
-  "main": "index.js",
- "scripts": {
-  "start": "json-server --watch db.json --host 0.0.0.0 --port 10000"
-},
+  "description": "JSON Server API",
+  "scripts": {
+    "start": "json-server --watch db.json --host 0.0.0.0 --port 10000"
+  },
   "dependencies": {
     "json-server": "^0.17.4"
   }
